envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                upgrade_configs:
                  - upgrade_type: websocket
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            path: /2015-03-31/functions/function/invocations
                          direct_response:
                            status: 400
                            body:
                              inline_string: |
                                {"code": "InvalidFunction", "message": "Reserved function name function."}
                          response_headers_to_add:
                            - header:
                                key: "Content-Type"
                                value: "application/json"
                        - match:
                            safe_regex:
                              google_re2: { max_program_size: 100 }
                              regex: "/2015-03-31/functions/(?P<function_name>[^/]+)/invocations"
                          route:
                            cluster: lambda_routing
                            regex_rewrite:
                              pattern:
                                google_re2: { max_program_size: 100 }
                                regex: "/2015-03-31/functions/([^/]+)/invocations"
                              substitution: "/2015-03-31/functions/function/invocations"
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              name: route_lambda.lua
                            envoy.filters.http.dynamic_forward_proxy:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.PerRouteConfig
                              host_rewrite_header: X-Host-Port
                        - match:
                            prefix: "/ws"
                          route:
                            cluster: ws_gateway
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 404
                            body:
                              inline_string: '{"code": "NOT_FOUND", "message": "No such path supported."}'
                          response_headers_to_add:
                            - header:
                                key: "Content-Type"
                                value: "application/json"
                http_filters:
                  - name: envoy.filters.http.lua
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      source_codes:
                        route_lambda.lua:
                          inline_string: |
                            function envoy_on_request(request_handle)
                              local path = request_handle:headers():get(":path")
                              local target_fn = string.match(path, "/2015%-03%-31/functions/([^/]+)/invocations")
                              local host_port = target_fn .. ":8080"
                              request_handle:headers():add("X-Target-Function", target_fn)
                              request_handle:headers():add("X-Host-Port", host_port)
                            end
                  - name: envoy.filters.http.dynamic_forward_proxy
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                      dns_cache_config:
                        name: dynamic_forward_proxy_cache_config
                        dns_lookup_family: V4_ONLY
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      log_format:
                        json_format:
                          status: "%RESPONSE_CODE%"
                          method: "%REQ(:method)%"
                          path: "%REQ(:path)%"
                          target_function: "%REQ(X-Target-Function)%"
                          upstream_host: "%UPSTREAM_HOST%"
                        omit_empty_values: true
                access_log_options:
                  flush_access_log_on_new_request: true
                  flush_log_on_tunnel_successfully_established: true

  clusters:
    - name: lambda_routing
      connect_timeout: 0.25s
      lb_policy: CLUSTER_PROVIDED
      cluster_type:
        name: envoy.clusters.dynamic_forward_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
          allow_insecure_cluster_options: true
          dns_cache_config:
            name: dynamic_forward_proxy_cache_config
            dns_lookup_family: V4_ONLY
    - name: ws_gateway
      # no connect timeout
      lb_policy: ROUND_ROBIN
      type: STRICT_DNS
      load_assignment:
        cluster_name: ws_gateway
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ws-gateway
                      port_value: 8080

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
  access_log:
    - name: dev-null
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
        path: /dev/null
